--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,15 +10,13 @@ env:
 phases:
   install:
     commands:
-      - echo "Check aws and git version"
+      - echo "Check aws version"
       - aws --version
-      - git --version
 
   pre_build:
     commands:
       - echo "Login to AWS ECR and get commit id"
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION| docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
-      - COMMIT_ID=$(git rev-parse --short HEAD)
 
   build:
     commands:
