--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,10 +2,10 @@ version: 0.2
 
 env:
   variables:
-    AWS_DEFAULT_REGION: "eu-central-1"
-    AWS_ACCOUNT_ID    : "371428523361"
+    REPO              : "suselstar"
     ECR_REPO_NAME_1   : "nginx"
     ECR_IMAGE_TAG     : "latest"
+    REGISTRY_URL      : "https://index.docker.io/v1/"
 
 phases:
   install:
@@ -16,15 +16,15 @@ phases:
   pre_build:
     commands:
       - echo "Login to AWS ECR and get commit id"
-      - aws ecr get-login-password --region $AWS_DEFAULT_REGION| docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
+      - docker login $REGISTRY_URL -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD
 
   build:
     commands:
       - echo Building the Docker image...
       - docker build -t $ECR_REPO_NAME_1:$ECR_IMAGE_TAG -f ./dockerfile-nginx .
-      - docker tag $ECR_REPO_NAME_1:$ECR_IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$ECR_REPO_NAME_1:$ECR_IMAGE_TAG
+      - docker tag $ECR_REPO_NAME_1:$ECR_IMAGE_TAG $REPO/$ECR_REPO_NAME_1:$ECR_IMAGE_TAG
       
   post_build:
     commands:
       - echo Pushing the Docker image...
-      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$ECR_REPO_NAME_1:$ECR_IMAGE_TAG
+      - docker push $REPO/ECR_REPO_NAME_1:$ECR_IMAGE_TAG
