--- a/buildspec.yml
+++ b/buildspec.yml
@@ -28,3 +28,6 @@ phases:
     commands:
       - echo Pushing the Docker image...
       - docker push $REPO/$ECR_REPO_NAME_1:$ECR_IMAGE_TAG
+artifacts:
+    files:
+        - imagedefinitions.json      
