--- a/dockerfile-nginx
+++ b/dockerfile-nginx
@@ -1,25 +1,10 @@
-FROM ubuntu:22.04
+FROM nginx:1.25-alpine
 
-ENV TZ="Europe/Minsk"
-ENV DEBIAN_FRONTEND=noninteractive
-RUN apt-get update &&\
-    apt-get install -y nginx-extras systemctl &&\
-    apt-get clean
-
-VOLUME /volume
-
+RUN mkdir -p /var/www/html
 COPY ./files/html /var/www/html
-COPY ./files/nginx/* /etc/nginx/sites-available
+COPY ./files/nginx/default.conf /etc/nginx/conf.d/default.conf
+COPY ./files/nginx/nginx.conf /etc/nginx/nginx.conf
 COPY ./files/certs/* /etc/ssl/certs/
-COPY ./files/log_script/logs.sh /log_script/
-COPY ./files/systemd_daemon/logs.service /etc/systemd/system/
-COPY ./files/log_script/entrypoint.sh /entrypoint.sh
 
-RUN ln -s /etc/nginx/sites-available/reverse-proxy /etc/nginx/sites-enabled/ &&\
-    ln -s /etc/nginx/sites-available/susel.ddns.net /etc/nginx/sites-enabled/ &&\
-    ln -s /etc/nginx/sites-available/susel.ddns.net2 /etc/nginx/sites-enabled/ &&\
-    chmod u+x /log_script/logs.sh &&\
-    chmod u+x /entrypoint.sh
-ENTRYPOINT ["/entrypoint.sh"]
 EXPOSE 80
 EXPOSE 443
