--- a/files/nginx/default.conf
+++ b/files/nginx/default.conf
@@ -31,10 +31,10 @@ server {
     }
 
 
-    location /info.php {
-         proxy_pass http://apache:8090/;
+    #location /info.php {
+    #     proxy_pass http://apache:8090/;
 
-    }
+    #}
 
 #---------Regular expression-----------
 
