--- a/files/nginx/default.conf
+++ b/files/nginx/default.conf
@@ -11,7 +11,7 @@ upstream notes {
 #load_module modules/ngx_http_image_filter_module.so;
 #=========================================================
 server {
-    server_name localhost;
+    server_name susel.ddns.net;
     access_log /var/log/nginx/access.log upstreamlog;
 
     location / {
@@ -74,13 +74,13 @@ server {
 
 
 server {
-    if ($host = localhost) {
+    if ($host = susel.ddns.net) {
         return 301 https://$host$request_uri;
     }
 
 
     listen 80;
-    server_name localhost;
+    server_name susel.ddns.net;
     return 404;
 
 
