--- a/files/nginx/default.conf
+++ b/files/nginx/default.conf
@@ -11,7 +11,7 @@ upstream notes {
 #load_module modules/ngx_http_image_filter_module.so;
 #=========================================================
 server {
-    server_name susel.ddns.net;
+    server_name localhost;
     access_log /var/log/nginx/access.log upstreamlog;
 
     location / {
@@ -63,7 +63,7 @@ server {
     }
 
 #==============SSL and redirect=========================================================================
-
+    listen 80;
     listen 443 ssl;
     ssl_certificate /etc/ssl/certs/fullchain1.pem;
     ssl_certificate_key /etc/ssl/certs/privkey1.pem;
@@ -73,18 +73,18 @@ server {
 
 
 
-server {
-    if ($host = susel.ddns.net) {
-        return 301 https://$host$request_uri;
-    }
+# server {
+#     if ($host = localhost) {
+#         return 301 https://$host$request_uri;
+#     }
 
 
-    listen 80;
-    server_name susel.ddns.net;
-    return 404;
+#     listen 80;
+#     server_name localhost;
+#     return 404;
 
 
-}
+# }
 
 #===================================================================================
 
